# scf_guess_datasets

./: .gitignore  README.md  pyproject.toml  test.py
scf_guess_datasets/: __init__.py  dataset.py  dft.py  sample.py
scf_guess_datasets/qm9/: __init__.py  basis.gbs  qm9.py
scf_guess_datasets/qm9/xyz/: dsgdb9nsd_000001.xyz  dsgdb9nsd_000002.xyz  dsgdb9nsd_000003.xyz  dsgdb9nsd_000004.xyz  dsgdb9nsd_000005.xyz  dsgdb9nsd_000006.xyz  dsgdb9nsd_000007.xyz  dsgdb9nsd_000008.xyz  dsgdb9nsd_000009.xyz  dsgdb9nsd_000010.xyz  dsgdb9nsd_000011.xyz  dsgdb9nsd_000012.xyz  dsgdb9nsd_000013.xyz  dsgdb9nsd_000014.xyz  dsgdb9nsd_000015.xyz  dsgdb9nsd_000016.xyz  dsgdb9nsd_000017.xyz  dsgdb9nsd_000018.xyz  dsgdb9nsd_000019.xyz  dsgdb9nsd_000020.xyz  dsgdb9nsd_000021.xyz  dsgdb9nsd_000022.xyz  dsgdb9nsd_000023.xyz  dsgdb9nsd_000024.xyz  dsgdb9nsd_000025.xyz  dsgdb9nsd_000026.xyz  dsgdb9nsd_000027.xyz  dsgdb9nsd_000028.xyz  dsgdb9nsd_000029.xyz  dsgdb9nsd_000030.xyz  dsgdb9nsd_000031.xyz  dsgdb9nsd_000032.xyz  dsgdb9nsd_000033.xyz  dsgdb9nsd_000034.xyz  dsgdb9nsd_000035.xyz  dsgdb9nsd_000036.xyz  dsgdb9nsd_000037.xyz  dsgdb9nsd_000038.xyz  dsgdb9nsd_000039.xyz  dsgdb9nsd_000040.xyz  (+133845 more)
scf_guess_datasets/qm9_isomeres/: __init__.py  basis.gbs  qm9_isomeres.py
scf_guess_datasets/qm9_isomeres/xyz/: dsC7O2H10nsd_0001.xyz  dsC7O2H10nsd_0002.xyz  dsC7O2H10nsd_0003.xyz  dsC7O2H10nsd_0004.xyz  dsC7O2H10nsd_0005.xyz  dsC7O2H10nsd_0006.xyz  dsC7O2H10nsd_0007.xyz  dsC7O2H10nsd_0008.xyz  dsC7O2H10nsd_0009.xyz  (+6086 more)
scf_guess_datasets/qm9_isomeres_md/: __init__.py  qm9_isomeres_md.py  split.py
(+565000 files in other folders)
