[build-system]
requires = ["setuptools>=66.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scf_guess_datasets"
version = "0.2.0"
description = "SCF Guess Datasets"
dependencies = [
    "pyscf",
    "numpy",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.xyz", "*.gbs"]